Fix horizontal scrolling issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,20 @@ body {
   --black: #1f1a17;
 }
 
-body::before {
+.background-container {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: -57px;
+}
+
+.background {
   width: 150%;
   height: 2500px;
   left: 50%;
+  top: 60px;
 
   position: absolute;
   content: "";
